--- a/aluraframe/client/index.html
+++ b/aluraframe/client/index.html
@@ -39,7 +39,7 @@
         <button class="btn btn-primary text-center" type="button">
             Importar ventas
         </button>
-        <button class="btn btn-primary text-center" type="button">
+        <button class="btn btn-primary text-center" type="button" onclick="ventaController.borra(event);">
             Borrar
         </button>
     </div> 
