--- a/aluraframe/client/index.html
+++ b/aluraframe/client/index.html
@@ -58,6 +58,8 @@
     <script src="js/app/views/VentasView.js"></script>
     <script src="js/app/models/Mensaje.js"></script>
     <script src="js/app/views/MensajeView.js"></script>
+    <script src="js/app/services/Factory.js"></script>
+    <script src="js/app/helpers/Bind.js"></script>
 
     <script>
         let ventaController = new VentaController();
