--- a/aluraframe/client/index.html
+++ b/aluraframe/client/index.html
@@ -61,6 +61,7 @@
     <script src="js/app/services/Factory.js"></script>
     <script src="js/app/helpers/Bind.js"></script>
     <script src="js/app/services/Request.js"></script>
+    <script src="js/app/services/HttpService.js"></script>
 
     <script>
         let ventaController = new VentaController();
