--- a/aluraframe/client/index.html
+++ b/aluraframe/client/index.html
@@ -19,7 +19,7 @@
         
         <div class="form-group">
             <label for="fecha">Fecha</label>
-            <input type="date" id="fecha" class="form-control" required autofocus/>        
+            <input type="text" placeholder="dd/mm/aaaa" id="fecha" class="form-control" required autofocus/>        
         </div>    
         
         <div class="form-group">
